Update Ulang tahun adek.html

--- a/Ulang tahun adek.html
+++ b/Ulang tahun adek.html
@@ -71,8 +71,11 @@
 
 <div class="line" style="animation-delay: 3s;">Selamat ulang tahun ya Adek 🎉</div>
 <div class="line" style="animation-delay: 6s;">Semoga panjang umur, sehat selalu 💖</div>
-<div class="line" style="animation-delay: 9s;">Mas akan selalu jaga kamu, temenin kamu, dan cintain kamu sekuat yang Mas bisa.</div>
-<div class="line" style="animation-delay: 11s;">Kamu anugerah terindah buat Mas, dan Mas nggak pernah lelah mencintaimu.</div>
+<div class="line" style="animation-delay: 9s;">Mas akan selalu jaga kamu.</div>
+<div class="line" style="animation-delay: 6s;">temenin kamu💖</div>
+<div class="line" style="animation-delay: 6s;">cintain kamu sekuat yang Mas bisa💖</div>
+<div class="line" style="animation-delay: 11s;">Kamu anugerah terindah buat Mas</div>
+<div class="line" style="animation-delay: 6s;">Mas nggak pernah lelah mencintaimu💖</div>
 <div class="line love" style="animation-delay: 13s;">♡ Mas cinta kamu sekarang dan selamanya ♡</div>
 
 <audio autoplay loop>
